// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->

\`\`\`jsx
<div />
\`\`\`
"
`;

exports[`'(2) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->

\`\`\`jsx
import foo from "foo";

<div />;
\`\`\`
"
`;

exports[`'(3) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->

\`\`\`jsx
export function Foo({ children }) {
  return (
    <div className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere eu volutpat id neque pellentesque">
      {children}
    </div>
  );
}
\`\`\`
"
`;

exports[`'(4) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->

\`\`\`tsx
<div />
\`\`\`
"
`;

exports[`'(5) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->

\`\`\`tsx
import foo from "foo";

<div />;
\`\`\`
"
`;

exports[`'(6) This plugin doesn\\'t support mark…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->

\`\`\`tsx
export function Foo({ children }) {
  return (
    <div className="lorem ipsum dolor sit amet consectetur adipiscing elit proin ex massa hendrerit eu posuere eu volutpat id neque pellentesque">
      {children}
    </div>
  );
}
\`\`\`
"
`;
